--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li><a href="abt.html">ABOUT US</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
                 <li><a href="singleprop.html">SINGLE PROPERTIES</a></li>
+                <li><a href="bookapt.html">BOOK APPOINTMENT</a></li>
             </ul>
         </DIV>
         <i class="fa fa-bars"></i>
