--- a/bookapt.html
+++ b/bookapt.html
@@ -11,7 +11,7 @@
     <div class="header">
     <CENTER>
         <h1>
-            FILL THE FORM TO RESERVE A TABLE
+            FILL THE FORM TO BOOK AN APPOINTMENT
         </h1>
         <BR><BR>
         <form action="/action_page.php">
